added tests for Parser